@@ -4,6 +4,9 @@ hw-detect (1.66) UNRELEASED; urgency=low
   * On frontends other than GTK+, only ask about PCMCIA resource range when
     user decided to start PCMCIA.  (Closes: #479391)
 
+  [ Otavio Salvador ]
+  * Queue atl2-modules for installation if it is in use.
+
  -- Jérémy Bobbio <lunar@debian.org>  Mon, 28 Jul 2008 19:27:56 +0200
 
 hw-detect (1.65) unstable; urgency=low
